cmake_minimum_required(VERSION 2.6)

set(CMAKE_C_FLAGS "-D_FILE_OFFSET_BITS=64 -DFUSE_USE_VERSION=29 -Wpointer-to-int-cast")

include_directories(${VU_HEADERS} ${CMAKE_CURRENT_SOURCE_DIR} )

set(LIBRARY_OUTPUT_PATH ${CMAKE_BINARY_DIR}/lib)

file(GLOB VU_MOD ${CMAKE_CURRENT_SOURCE_DIR}/vufuse.c)
file(GLOB_RECURSE VUFUSEREAL_SOURCES ${CMAKE_CURRENT_SOURCE_DIR}/*.c)

string(REPLACE ".c" "" VU_MOD_FILE ${VU_MOD})
get_filename_component(VU_MOD_TARGET ${VU_MOD_FILE} NAME)

add_library(${VU_MOD_TARGET} SHARED ${VUFUSEREAL_SOURCES})
set_target_properties(${VU_MOD_TARGET} PROPERTIES PREFIX "")


install(TARGETS ${VU_MOD_TARGET} LIBRARY DESTINATION ${MODULES_INSTALL_PATH})

